k8s/mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: packages-friendsofshopware-com
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
      containers:
        - name: mysql
          image: mysql:8.0.19
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: packages-friendsofshopware-com
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
