k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: packages
  namespace: packages-friendsofshopware-com
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - packages.friendsofshopware.com
      secretName: packages-friendsofshopware-com
  rules:
    - host: packages.friendsofshopware.com
      http:
        paths:
          - backend:
              serviceName: packages
              servicePort: 80
